Fix post created-date position on mobile

--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -105,15 +105,15 @@ label.visible {
 
   transition: all 300ms ease-out;
 
-  
+
   &:hover {
     background-color: $pri-col-hover;
   }
-  
+
   &:active {
     background-color: $pri-col-active;
   }
-  
+
   &:disabled {
     cursor: default;
     color: $disabled-text;
@@ -191,6 +191,7 @@ table {
 markdown {
   h1 {
     font-size: $font-size-h3;
+    text-align: left;
   }
 
   h2 {
